# PC_MCU_UART

PC_MCU_UART_ESP32/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
PC_MCU_UART_ESP32/.github/workflows/: stage_ble.yml
PC_MCU_UART_ESP32/main/: CMakeLists.txt  main.c
PC_MCU_UART_ESP32/main/EEPROM/: eeprom.c  eeprom.h  eeprom_conf.c  eeprom_conf.h  eeprom_hal.c  eeprom_hal.h  eeprom_mngr.c  eeprom_mngr.h
PC_MCU_UART_ESP32/main/TIMER/: timer.c  timer.h  timer_conf.c  timer_conf.h  timer_hal.c  timer_hal.h  timer_mngr.c  timer_mngr.h
PC_MCU_UART_ESP32/main/UART/: uart.c  uart.h  uart_conf.c  uart_conf.h  uart_hal.c  uart_hal.h  uart_mngr.c  uart_mngr.h
PC_MCU_UART_ESP32/out_logs/: 06__11_2023__1_50_PM.txt  06__11_2023__2_30_PM.txt
